add personal statement

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-proposal-blx.bib
-proposal.aux
-proposal.bbl
-proposal.blg
-proposal.dvi
-proposal.log
-proposal.pdf
-proposal.run.xml
+*-blx.bib
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.log
+*.pdf
+*.out
+*.run.xml
 stopwords.rws
